:bug: Fix content wrapper wrong size after ff6e7d0

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -15,4 +15,5 @@ html {
   max-width: 960px;
   margin: 0 auto;
   padding: 0 24px;
+  width: 100%;
 }
